# trello-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/trello_mcp/: __main__.py  client.py  config.py  exceptions.py  server.py
src/trello_mcp/tools/: attachments.py  boards.py  cards.py  checklists.py  labels.py  lists.py  members.py  search.py
tests/: conftest.py  test_boards.py  test_cards.py  test_client.py  test_config.py  test_lists.py
